# parallel_bfs

./: .gitmodules  CMakeLists.txt  bench.sh  main.cpp
benchmark/: bfs_benchmark.cpp
benchmark_results/: 01_first_benchmark.json  02_optimized_final_copy.json  03_optimized_internal_for.json  04_no_optimized_internal_for.json  05_optimized_dist_init.json  06_bottom_up_optimization.json  07_no_bottom_optimization.json  08_strong_to_weak.json  09_parallel-for_to-fill.json
bfslib/: CMakeLists.txt  bfs.cpp  bfs.h
test/: test_bfs.cpp
